Solo falta mostrar mensaje antes de eliminar y agregar comandas en las mesas

--- a/src/ui/main.html
+++ b/src/ui/main.html
@@ -23,18 +23,18 @@
                     <li><a id="menuNewProv" href="#">Nuevo Proveedor...</a></li>
                     <li><a id="menuEditProv" href="#">Modificar Proveedor...</a></li>
                     <li><a id="menuDelProv" href="#">Eliminar Proveedor...</a></li>
-                    <li><a href="#">Cuentas a pagar</a></li>
+                    <!-- <li><a href="#">Cuentas a pagar</a></li>
                     <li><a href="#">Ingresar Compra/Gasto</a></li>
-                    <li><a href="#">Informe IVA Compra</a></li>
+                    <li><a href="#">Informe IVA Compra</a></li> -->
                   </ul>
                 </li>
-                <li><a href="#">Ventas</a>
-                  <ul class="submenu">
-                    <li><a href="#">Administrar</a></li>
-                    <li><a href="#">Cuentas a cobrar</a></li>
-                    <li><a href="#">Ingresar Venta</a></li>
-                    <li><a href="#">Informe IVA Venta</a></li>
-                  </ul>
+                <li><a id="menuProduct" href="#">Productos</a>
+                  <!-- <ul class="submenu">
+                    <li><a  href="#">Nuevo Producto...</a></li>
+                    <li><a href="#">Modificar Producto...</a></li>
+                    <li><a href="#">Eliminar Producto...</a></li> -->
+                    <!-- <li><a href="#">Informe IVA Venta</a></li> -->
+                  <!-- </ul> -->
                 </li>
                 <li><a id="menuSalon" href="#">Salon</a></li>
               </ul>
