--- a/src/ui/main.html
+++ b/src/ui/main.html
@@ -13,21 +13,21 @@
                 <li><a href="#">Archivo</a>
                 <ul class="submenu">
                     <li><a id="menuOpt" href="#">Opciones</a></li>
-                    <li><a href="#">Backup</a></li>
-                    <li><a href="#">Cerrar</a></li>
+                    <!-- <li><a href="#">Backup</a></li>
+                    <li><a href="#">Cerrar</a></li> -->
                   </ul>
                 </li>
-                <li>
-                  <a href="#">Proveedores</a>
+                <!-- <li> -->
+                  <!-- <a href="#">Proveedores</a>
                   <ul class="submenu">
                     <li><a id="menuNewProv" href="#">Nuevo Proveedor...</a></li>
                     <li><a id="menuEditProv" href="#">Modificar Proveedor...</a></li>
-                    <li><a id="menuDelProv" href="#">Eliminar Proveedor...</a></li>
+                    <li><a id="menuDelProv" href="#">Eliminar Proveedor...</a></li> -->
                     <!-- <li><a href="#">Cuentas a pagar</a></li>
                     <li><a href="#">Ingresar Compra/Gasto</a></li>
                     <li><a href="#">Informe IVA Compra</a></li> -->
-                  </ul>
-                </li>
+                  <!-- </ul> -->
+                <!-- </li> -->
                 <li><a id="menuProduct" href="#">Productos</a>
                   <!-- <ul class="submenu">
                     <li><a  href="#">Nuevo Producto...</a></li>
